# strazkvaldo

./: LICENSE  README.md
docs/: .gitignore  Makefile  markdown-transpiler  specification.md  Špecifikácia.md
docs/reports/: report_beta.md  report_final.md  report_week10.md  report_week11.md  report_week4.md  report_week5.md  report_week6.md  report_week7.md  report_week8.md  report_week9.md  report_week_04.md
docs/reports/generator/: .gitignore  generate-from-templates  report_beta_template.md  report_final_template.md  report_week_template.md
strazkvaldo-backend/: Cargo.toml  Makefile
strazkvaldo-backend/migrations/: 20250326094729_init.down.sql  20250326094729_init.up.sql  20250427174016_add_settings.up.sql  20250503072641_soft_delete.down.sql  20250503072641_soft_delete.up.sql  20250503133202_add_room_to_activites.down.sql  20250503133202_add_room_to_activites.up.sql
strazkvaldo-backend/src/: application_enums.rs  enums.rs  handlers.rs  handlers_ota.rs  handlers_ra.rs  handlers_user.rs  main.rs  model.rs  schema.rs  tests.rs
strazkvaldo-backend/src/auth/: handler.rs  middleware.rs
strazkvaldo-backend/src/handlers/: handlers_activities.rs  handlers_enum.rs  handlers_ota.rs  handlers_ra.rs  handlers_room.rs  handlers_settings.rs  handlers_user.rs  mod.rs
strazkvaldo-ui/: Makefile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
strazkvaldo-ui/src/: app.html
strazkvaldo-ui/src/lib/: common.ts  serviceRoutes.ts  uiRoutes.ts  userState.svelte.ts
strazkvaldo-ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
strazkvaldo-ui/src/routes/about/: +page.svelte
strazkvaldo-ui/src/routes/admin/app-user/: +page.svelte
strazkvaldo-ui/src/routes/admin/enum/: +page.svelte  +page.ts
strazkvaldo-ui/src/routes/admin/user/: +page.svelte  +page.ts
strazkvaldo-ui/src/routes/login/: +page.svelte
(+59 files in other folders)
