[package]
name = "strazkvaldo-backend"
version = "0.7.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.7"
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid", "macros"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
