[package]
name = "strazkvaldo-backend"
version = "0.7.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = { version = "4.10.2" }
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.7"
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid", "macros", "bit-vec"] }
sha2 = "0.10.8"
hex = "0.4.3"
cron = "0.15.0"
tokio-cron-scheduler = "0.13.0"
tokio = "1.44.2"
